exports[`test parses query correctly 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "getContent",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "alias": Object {
              "kind": "Name",
              "value": "content",
            },
            "arguments": Array [
              Object {
                "kind": "Argument",
                "name": Object {
                  "kind": "Name",
                  "value": "id",
                },
                "value": Object {
                  "kind": "Variable",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                },
              },
            ],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "node",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                  "selectionSet": null,
                },
                Object {
                  "directives": Array [],
                  "kind": "InlineFragment",
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "alias": Object {
                          "kind": "Name",
                          "value": "entryId",
                        },
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "id",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "title",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "status",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "channelName",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "meta",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "urlTitle",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "siteId",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "date",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "channelId",
                              },
                              "selectionSet": null,
                            },
                          ],
                        },
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "content",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "body",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "ooyalaId",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "tags",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [
                                Object {
                                  "kind": "Argument",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "sizes",
                                  },
                                  "value": Object {
                                    "kind": "ListValue",
                                    "values": Array [
                                      Object {
                                        "kind": "StringValue",
                                        "value": "large",
                                      },
                                    ],
                                  },
                                },
                              ],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "images",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "fileName",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "fileType",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "fileLabel",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "url",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                          ],
                        },
                      },
                    ],
                  },
                  "typeCondition": Object {
                    "kind": "NamedType",
                    "name": Object {
                      "kind": "Name",
                      "value": "Content",
                    },
                  },
                },
              ],
            },
          },
          Object {
            "alias": null,
            "arguments": Array [],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "live",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "live",
                  },
                  "selectionSet": null,
                },
                Object {
                  "alias": null,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "embedCode",
                  },
                  "selectionSet": null,
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [
        Object {
          "defaultValue": null,
          "kind": "VariableDefinition",
          "type": Object {
            "kind": "NonNullType",
            "type": Object {
              "kind": "NamedType",
              "name": Object {
                "kind": "Name",
                "value": "ID",
              },
            },
          },
          "variable": Object {
            "kind": "Variable",
            "name": Object {
              "kind": "Name",
              "value": "id",
            },
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 526,
    "source": Source {
      "body": "
  query getContent($id: ID!) {
    content: node(id: $id) {
      id
      ... on Content {
        entryId: id
        title
        status
        channelName
        meta {
          urlTitle
          siteId
          date
          channelId
        }
        content {
          body
          ooyalaId
          tags
          images(sizes: [\"large\"]) {
            fileName
            fileType
            fileLabel
            url
          }
        }
      }
    }
    live {
      live
      embedCode
    }
  }
",
      "name": "GraphQL",
    },
    "start": 3,
  },
}
`;

exports[`test renders an on demand video if present, and not live 1`] = `
<div>
  <Meta
    id="10458239056qaklpstjw40951281"
    image="https://test.com/1234/testImage.jpg"
    meta={
      Array [
        Object {
          "content": "article",
          "property": "og:type",
        },
      ]
    }
    title="Stuff" />
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Connect(VideoPlayerWithoutData)
      autoplay="false"
      id="owqoitpuq52059akplsat0520" />
  </Connect(SplitContainerWithoutData)>
  <Left
    scroll={true}>
    <div
      className="one-whole">
      <section
        className="soft@palm soft-double-sides@palm-wide-and-up soft@lap soft-double@lap-wide-and-up push-top push-double-top@lap-and-up">
        <h2
          className="capitalize">
          Stuff
        </h2>
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>some kind of content about harambe</p>",
            }
          } />
      </section>
      <Apollo(Connect(Template))
        excludedIds={
          Array [
            "10458239056qaklpstjw40951281",
          ]
        }
        tags={Array []} />
    </div>
  </Left>
</div>
`;

exports[`test renders loading if no content 1`] = `
<div
  className="locked-ends locked-sides floating">
  <div
    className="floating__item">
    <Loading />
  </div>
</div>
`;

exports[`test renders the live video when live 1`] = `
<div>
  <Meta
    id="10458239056qaklpstjw40951281"
    image="https://test.com/1234/testImage.jpg"
    meta={
      Array [
        Object {
          "content": "article",
          "property": "og:type",
        },
      ]
    }
    title="Stuff" />
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Connect(VideoPlayerWithoutData)
      autoplay="false"
      id="1234LIVETEST4321" />
  </Connect(SplitContainerWithoutData)>
  <Left
    scroll={true}>
    <div
      className="one-whole">
      <section
        className="soft@palm soft-double-sides@palm-wide-and-up soft@lap soft-double@lap-wide-and-up push-top push-double-top@lap-and-up">
        <h2
          className="capitalize">
          Stuff
        </h2>
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>some kind of content about harambe</p>",
            }
          } />
      </section>
      <Apollo(Connect(Template))
        excludedIds={
          Array [
            "10458239056qaklpstjw40951281",
          ]
        }
        tags={Array []} />
    </div>
  </Left>
</div>
`;

exports[`test renders with props 1`] = `
<div>
  <Meta
    id="10458239056qaklpstjw40951281"
    image="https://test.com/1234/testImage.jpg"
    meta={
      Array [
        Object {
          "content": "article",
          "property": "og:type",
        },
      ]
    }
    title="Stuff" />
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}>
    <Connect(VideoPlayerWithoutData)
      autoplay="false"
      id="owqoitpuq52059akplsat0520" />
  </Connect(SplitContainerWithoutData)>
  <Left
    scroll={true}>
    <div
      className="one-whole">
      <section
        className="soft@palm soft-double-sides@palm-wide-and-up soft@lap soft-double@lap-wide-and-up push-top push-double-top@lap-and-up">
        <h2
          className="capitalize">
          Stuff
        </h2>
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>some kind of content about harambe</p>",
            }
          } />
      </section>
      <Apollo(Connect(Template))
        excludedIds={
          Array [
            "10458239056qaklpstjw40951281",
          ]
        }
        tags={Array []} />
    </div>
  </Left>
</div>
`;
